<resources>
    <string name="notify_channel_id" translatable="false">General</string>
    <string name="app_name">Expro99</string>
    <string name="new_notification">You received a new notification.</string>
    <string name="search_hint">Search</string>
    <string name="splash_update_title">Upgrade to the latest version?</string>
    <string name="splash_update_desc">The current version v%s\nPlease install the latest version v%s</string>
    <string name="splash_update_negative">Skip</string>
    <string name="splash_update_positive">Confirm</string>
    <string name="login_title">Login</string>
    <string name="login_desc">Login to get the latest updates</string>
    <string name="login_hint_phone">Phone number</string>
    <string name="login_hint_password">Password</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_third_party">Third-Party Account Login</string>
    <string name="login_login">Login</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_register">Register</string>
    <string name="login_invalid_credentials">Invalid Username or Password</string>
    <string name="login_bind_title">Bind Mobile Number</string>
    <string name="login_bind_desc">Please bind your mobile number. After binding, the random number will no longer be valid.</string>
    <string name="login_bind_confirm">Confirm Binding</string>
    <string name="login_bind_resend_countdown">Resend OTP (%d seconds)</string>
    <string name="login_bind_resend">Resend OTP</string>
    <string name="login_bind_send">Send OTP</string>
    <string name="login_bind_hint">OTP</string>
    <string name="register_title">Register</string>
    <string name="register_desc">Good music, good life</string>
    <string name="register_hint_phone">Phone number</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_confirm_password">Confirm password</string>
    <string name="register_hint_invitation_code">Invitation code</string>
    <string name="register_password_mismatch">Password and confirm password do not match</string>
    <string name="register_password_invalid">Password length must be between 6–16 characters</string>
    <string name="register_password_requirement">Password length must be between 6–16 characters</string>
    <string name="register_register">Register</string>
    <string name="register_tnc_desc">By registering, you agree to the</string>
    <string name="register_tnc">User Agreement</string>
    <string name="reset_request_title">Reset Password</string>
    <string name="reset_request_hint_phone">Phone number</string>
    <string name="reset_request_verify">Verify</string>
    <string name="verify_otp_title">Verification Code</string>
    <string name="verify_otp_desc">OTP has been sent to %s</string>
    <string name="verify_otp_count_down">Resend OTP in (%ds)</string>
    <string name="verify_otp_resend">Resend OTP</string>
    <string name="verify_otp_verify">Verify</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_desc">Please enter new password and confirm password</string>
    <string name="reset_password_hint_new_password">New password</string>
    <string name="reset_password_hint_confirm_password">Confirm password</string>
    <string name="reset_password_requirements">Password length must be between 6–16 characters</string>
    <string name="reset_password_reset">Reset Password</string>
    <string name="reset_password_mismatch">New and confirm password do not match</string>
    <string name="reset_password_invalid">Password length must be between 6–16 characters</string>
    <string name="reset_password_success_title">Reset Password</string>
    <string name="reset_password_success_desc">Your password has been reset successfully. Please proceed to login with the new password.</string>
    <string name="reset_password_success_okay">OK</string>
    <string name="dashboard_tab_home">Home</string>
    <string name="dashboard_tab_promotion">Promotion</string>
    <string name="dashboard_tab_support">Support</string>
    <string name="dashboard_tab_profile">Me</string>
    <string name="action_panel_top_up">Top Up</string>
    <string name="action_panel_transaction">Transaction</string>
    <string name="action_panel_withdraw">Withdrawal</string>
    <string name="action_panel_wallet">My Wallet</string>
    <string name="action_panel_vip">VIP Privileges</string>
    <string name="action_panel_promotion">Promotion</string>
    <string name="action_panel_bank">Bank Details</string>
    <string name="action_panel_affiliate">Affiliate</string>
    <string name="news_centre_title">News Centre</string>
    <string name="news_centre_tab_customer_care">Support</string>
    <string name="news_centre_tab_notification">Notifications</string>
    <string name="news_centre_tab_home_notification">Announcements</string>
    <string name="news_centre_tab_app_feedback">App Feedback</string>
    <string name="home_balance">Account Balance</string>
    <string name="home_withdraw_all">Refresh</string>
    <string name="home_yxi_category_all">All</string>
    <string name="home_yxi_category_popular">Popular</string>
    <string name="home_yxi_category_app">APP</string>
    <string name="home_yxi_category_slots">Slots</string>
    <string name="home_yxi_category_live">Live</string>
    <string name="home_yxi_category_sports">Sports</string>
    <string name="home_yxi_category_fishing">Fishing</string>
    <string name="home_yxi_category_cock">Cock</string>
    <string name="home_yxi_category_lottery">Lottery</string>
    <string name="home_yxi_category_cards">Cards</string>
    <string name="yxi_details_refreshing">Refreshing, please wait before going back</string>
    <string name="yxi_details_login_label">Your Login Credentials</string>
    <string name="yxi_details_login_delete">Delete Player</string>
    <string name="yxi_details_login_username">Username</string>
    <string name="yxi_details_login_password">Password</string>
    <string name="yxi_details_yxi_list">%s Game List</string>
    <string name="yxi_details_desc">Easily play %s step-by-step on your mobile</string>
    <string name="yxi_details_step_1_label">1</string>
    <string name="yxi_details_step_1">Step 1</string>
    <string name="yxi_details_step_2_label">2</string>
    <string name="yxi_details_step_1_desc">Transfer funds into your %s wallet to obtain your username and password in the section below on this page</string>
    <string name="yxi_details_step_2">Step 2</string>
    <string name="yxi_details_step_2_desc">Go to the download page to install the app on your phone</string>
    <string name="yxi_details_step_2_download">download</string>
    <string name="yxi_details_step_3_label">3</string>
    <string name="yxi_details_step_3">Step 3</string>
    <string name="yxi_details_step_3_desc">Launch the app on your phone and log in using your username and password</string>
    <string name="yxi_details_choose_yxi">Please select a game first</string>
    <string name="yxi_details_start">Start Game</string>
    <string name="yxi_details_top_up">Top Up</string>
    <string name="yxi_details_transfer">Transfer</string>
    <string name="yxi_details_delete_player_title">Delete Confirmation</string>
    <string name="yxi_details_delete_player_desc">Do you want to delete player %s?\nAfter deletion, your remaining Points will be returned to Credit.</string>
    <string name="yxi_details_delete_player_note">*Note: Only one new player can be added per day.\nThe player to be deleted must have less than 1 Point.</string>
    <string name="yxi_details_delete_player_negative">Cancel</string>
    <string name="yxi_details_delete_player_positive">Confirm</string>
    <string name="yxi_details_delete_player_success">Player deleted successfully. Credit will be returned to your account.</string>
    <string name="yxi_details_delete_player_success_positive">OK</string>
    <string name="yxi_player_title">Select Player</string>
    <string name="yxi_player_points">points</string>
    <string name="yxi_player_new">Add New Player</string>
    <string name="yxi_lobby_home">Home</string>
    <string name="yxi_action_title">Please Choose</string>
    <string name="yxi_action_refresh">Refresh</string>
    <string name="yxi_action_reload">Top Up</string>
    <string name="yxi_action_withdraw">Withdraw</string>
    <string name="yxi_action_exit">Exit Game</string>
    <string name="yxi_withdraw_title">Points Withdrawal</string>
    <string name="yxi_withdraw_credit">Credit</string>
    <string name="yxi_withdraw_points">%s Points</string>
    <string name="yxi_withdraw_id">ID: %s</string>
    <string name="yxi_withdraw_desc">Please enter the withdrawal amount</string>
    <string name="yxi_withdraw_all">All</string>
    <string name="yxi_withdraw_transfer">Transfer</string>
    <string name="yxi_withdraw_start_yxi">Start Game</string>
    <string name="me_profile">My Profile</string>
    <string name="me_action_privacy_security">Privacy &amp; Security</string>
    <string name="me_action_find_us">Find Us</string>
    <string name="me_action_find_us_desc">To avoid connection issues</string>
    <string name="me_action_app_download">APP Download</string>
    <string name="me_action_app_feedback">APP Feedback</string>
    <string name="me_action_language">Language</string>
    <string name="me_action_help">Help</string>
    <string name="me_action_logout">Logout</string>
    <string name="me_action_logout_desc">Switch account</string>
    <string name="profile_personal_details">Profile</string>
    <string name="profile_change_profile_pic">Change</string>
    <string name="profile_username">Username</string>
    <string name="profile_user_id">User ID</string>
    <string name="profile_bind_social_media">Bind Social Media Account</string>
    <string name="profile_dob">Date of Birth</string>
    <string name="profile_choose_dob">Choose date</string>
    <string name="profile_save">Save</string>
    <string name="profile_saved_successfully">Saved successfully</string>
    <string name="player_transfer_title">Transfer</string>
    <string name="player_transfer_point">Points</string>
    <string name="player_transfer_credit">Credit</string>
    <string name="player_transfer_one_click">Claim All</string>
    <string name="vip_redemption_redeem">Redeem</string>
    <string name="vip_redemption_success">Success</string>
    <string name="bank_form_add_bank">Add Bank Account</string>
    <string name="bank_form_account_holder">Account Holder Name</string>
    <string name="bank_form_account_holder_desc">Only one account holder name can be used. It cannot be deleted, please check carefully.</string>
    <string name="bank_form_bank_name">Bank Name</string>
    <string name="bank_form_choose_bank">Select Bank</string>
    <string name="bank_form_bank_account_number">Bank Account Number</string>
    <string name="bank_form_quick_pay">Quick Pay</string>
    <string name="bank_form_disclaimer">By enabling this account for quick payments, you agree to the terms and conditions.</string>
    <string name="bank_form_add">Add Bank Account</string>
    <string name="bank_form_delete">Delete Bank Account</string>
    <string name="affiliate_kpi_date">Date</string>
    <string name="affiliate_kpi_total_commission">Total Commission</string>
    <string name="affiliate_kpi_head_count">Head Count</string>
    <string name="app_feedback_upload_gallery">Gallery</string>
    <string name="app_feedback_upload_camera">Camera</string>
    <string name="app_feedback_upload_cancel">Cancel</string>
    <string name="placeholder_currency_amount">RM0.00</string>
    <string name="placeholder_count">0</string>
    <string name="placeholder_dash">-</string>
    <string name="cd_icon">Icon</string>
    <string name="cd_image">Image</string>
</resources>