<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_transaction_details"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/pingfang_sc_regular"
            android:text="@string/affiliate_kpi_date"
            android:textColor="@color/white_FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/pingfang_sc_regular"
            android:gravity="end"
            android:textColor="@color/white_FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pingfang_sc_regular"
            android:text="@string/affiliate_kpi_total_commission"
            android:textColor="@color/white_FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_total_commission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pingfang_sc_regular"
            android:gravity="end"
            android:text="@string/placeholder_currency_amount"
            android:textColor="@color/white_FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/pingfang_sc_regular"
            android:text="@string/affiliate_kpi_head_count"
            android:textColor="@color/white_FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_total_member"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:fontFamily="@font/pingfang_sc_regular"
            android:gravity="end"
            android:text="@string/placeholder_count"
            android:textColor="@color/white_FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>