<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_blue_8"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cd_icon"
        android:src="@drawable/ic_redemption" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pingfang_sc_regular"
            android:textColor="@color/orange_F8AF07"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pingfang_sc_regular"
            android:textColor="@color/gray_6E6E6E"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_redeem"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_button_vip"
            android:fontFamily="@font/pingfang_sc_medium"
            android:gravity="center"
            android:text="@string/vip_redemption_redeem"
            android:textColor="@color/black_000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pingfang_sc_regular"
            android:text="@string/vip_redemption_success"
            android:textColor="@color/green_9EEE69"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>